[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adoutils"
version = "0.1.0"
authors = [
    { name="Manuel Barrera", email="manubarrerazurita@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "num2words==0.5.12"
]

[project.urls]
"Homepage" = "https://github.com/sovieeet/ado-utils-python-package"
"Bug Tracker" = "https://github.com/sovieeet/ado-utils-python-package/issues"
